--- a/views/Homepage.erb
+++ b/views/Homepage.erb
@@ -2,13 +2,15 @@
 <html>
   <head></head>
   <body>
-    <!-- the ERB tag below will be replaced by the value of @name -->
     <h1> MakersBnB by priceless </h1>
     <p>
     
-    Hello User! <br><br>
-    
-    
+    Hello User! 
+    <br><br>
+    About
+    Login
+    Signup
+    <br><br>
     List of Properties:
     <% @properties.each do |property| %>
       <div>Name: <a href="/property/<%= property.id %>"><%= property.name %></a> Price per night: £<%= property.price %></div>
