--- a/views/user_created.erb
+++ b/views/user_created.erb
@@ -1,12 +1,13 @@
 <html>
   <head><link href="<%= url('/users.css') %>" rel="stylesheet" type="text/css" /></head>
   <body>
-  <div class="form">
+  <div >
     <!-- the ERB tag below will be replaced by the value of @name -->
-    <h1> MakersBnB by priceless </h1>
+     <a href="/"> <h1>MakersBnB!</h1></a>
+     <h3>New user has been created!</h3>
     <p>
     
-    New user has been created!
+    
     
     </p>
 
