--- a/views/list_property.erb
+++ b/views/list_property.erb
@@ -1,8 +1,9 @@
 <!-- file: views/list_property.erb -->
 <html>
-  <head></head>
+  <head><link href="<%= url('/users.css') %>" rel="stylesheet" type="text/css" /></head>
   <body>
-    <h1> MakersBnB by priceless </h1>
+     <a href="/"> <h1>MakersBnB!</h1></a>
+     <h3>List a new property to MakersBnB!</h3>
     <h2> List Property </h2>
     <p>
     <form action="/list_property" method="POST">
@@ -10,7 +11,7 @@
       Property Description: <input type="text" name="description"><br><br>
       Property Price: <input type="text" name="price"><br><br>
     
-      <input type="submit" value="create property">
+      <input class="button" type="submit" value="create property">
     </form>
     
     </p>
