Added ability to select availability

--- a/views/property.erb
+++ b/views/property.erb
@@ -13,9 +13,9 @@
     <div>Description: <%= @property.description %></div>
     <div>Price per night: £<%= @property.price %></div>
     
-    
+    <a  href="/availability/<%= @property.id %>"><button class="button">Property dates</button></a><br><br>
     </p>
 
-
+    
   </body>
 </html>
