added session info for user to sign in page.

--- a/views/Homepage.erb
+++ b/views/Homepage.erb
@@ -3,6 +3,7 @@
   <head><link href="<%= url('/users.css') %>" rel="stylesheet" type="text/css" /></head>
   <body>
   <div>
+    <%= @user_id %>
      <a href="/"> <h1>MakersBnB!</h1></a>
      <h3>Welcome to MakersBnB!</h3>
     <p>
