--- a/views/property.erb
+++ b/views/property.erb
@@ -12,7 +12,7 @@
     <div>Name: <%= @property.name %></div>
     <div>Description: <%= @property.description %></div>
     <div>Price per night: £<%= @property.price %></div>
-    
+     <div>Owner is <%= @property.user_id %></div>
     
     </p>
 
