--- a/public/users.css
+++ b/public/users.css
@@ -23,7 +23,31 @@ h1 {
 
 body {
   text-align: center;
+  background-color: #C4C4C4;
 }
 h3 {
   color: #ff5a5f;
+}
+table, th, td {
+  border: 10px solid;
+  border-color: black;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img{
+  max-width: 100%;
+}
+
+.image{
+  flex-basis: 40%;
+}
+
+.text{
+  font-size: 50px;
+  padding-left: 20px;
 }
